# Base-Project

./: .env.example  .env.prod  .env.test  .gitignore  Makefile  QWEN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: lifespan.py  main.py
app/api/: exception_handlers.py
app/api/v1/: dependencies.py  router.py
app/api/v1/routers/: auth.py  user.py
app/api/v1/schemas/: auth.py  user.py
app/core/: config.py  dependencies.py
app/core/exceptions/: __init__.py  auth.py  base.py  messages.py
app/domain/: EXAMPLES.py  README.md  __init__.py
app/domain/entities/: __init__.py  user.py
app/domain/exceptions/: __init__.py  base.py  messages.py  users.py
app/domain/interfaces/: __init__.py  unit_of_work.py  user_repository.py
app/domain/value_objects/: __init__.py  email.py  password.py
app/infrastructure/database/: __init__.py  engine.py  unit_of_work.py
app/infrastructure/database/models/: user.py
app/infrastructure/mappers/: __init__.py  user_mapper.py
app/infrastructure/repositories/: __init__.py  user.py
app/shared/: logging.py  security.py
app/use_cases/: __init__.py  base.py
app/use_cases/auth/: authenticate.py  register.py
app/use_cases/profile/: access.py  get.py  update.py
migrations/: env.py
migrations/versions/: 15009d2e781c_initial_migration.py
