[project]
name = "usecase"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Terekhov",email = "cahdro2155@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]


[tool.poetry.scripts] 
lint = "ruff.__main__:main" 

[tool.ruff] 
line-length = 88 
fix = true 
exclude = ["migrations", ".venv"] 

[tool.ruff.lint] 
select = ["E", "F", "I"] 

[tool.ruff.lint.isort] 
combine-as-imports = true 
force-single-line = false